--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Mengelola koleksi buku Anda dengan mudah dan efisien, memiliki dua rak buku, dan fitur pemberitahuan dari setiap aksi yang dilakukan" />    
     <title>Bookshelf Application</title>
     <link
       rel="stylesheet"
